flux/apps/base/media/newgen_arrstack.yaml
# Deluge StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deluge
  namespace: media-server
spec:
  serviceName: deluge
  replicas: 1
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
      - name: deluge
        image: linuxserver/deluge@sha256:459a929b25299309f172e3566fc0653a87509ed7d057ad8127fc4168d16edebe # {"$imagepolicy": "flux-system:deluge"}
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 150Mi
        readinessProbe:
          httpGet:
            path: /
            port: 8112
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8112
          initialDelaySeconds: 60
          periodSeconds: 30
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: completed
          mountPath: /completed
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-direct
      - name: completed
        persistentVolumeClaim:
          claimName: downloads-complete
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 120Mi
---
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: media-server
spec:
  ports:
  - port: 8112
    targetPort: 8112
  selector:
    app: deluge
---
# Jellyfin StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: media-server
spec:
  serviceName: jellyfin
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:latest
        resources:
          limits:
            memory: 18Gi
          requests:
            memory: 4Gi
        readinessProbe:
          httpGet:
            path: /health
            port: 8096
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8096
          initialDelaySeconds: 60
          periodSeconds: 30
        volumeMounts:
        - name: config
          mountPath: /config
        - name: cache
          mountPath: /cache
        - name: movies
          mountPath: /mnt/films
        - name: shows
          mountPath: /mnt/shows
      volumes:
      - name: movies
        persistentVolumeClaim:
          claimName: movies
      - name: shows
        persistentVolumeClaim:
          claimName: shows
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 15Gi
  - metadata:
      name: cache
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media-server
spec:
  ports:
  - port: 8096
    targetPort: 8096
  selector:
    app: jellyfin
---
# Jackett StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jackett
  namespace: media-server
spec:
  serviceName: jackett
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: lscr.io/linuxserver/jackett:0.24.166@sha256:332ccbcc6ec5dd6b77420686113003e851e7b96a321d4a20a042f2df6ef4215f # {"$imagepolicy": "flux-system:jackett"}
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 200Mi
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 120Mi
  - metadata:
      name: downloads
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 120Mi
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media-server
spec:
  ports:
  - port: 9117
    targetPort: 9117
  selector:
    app: jackett
---
# Radarr StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: media-server
spec:
  serviceName: radarr
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:5.28.0@sha256:c984533510abe0219a70e80d15bd0d212b7df21baa0913759c4ce6cc9092240b # {"$imagepolicy": "flux-system:radarr"}
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 150Mi
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: downloads
          mountPath: /downloads
        - name: completed
          mountPath: /completed
      volumes:
      - name: movies
        persistentVolumeClaim:
          claimName: movies
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-direct
      - name: completed
        persistentVolumeClaim:
          claimName: downloads-complete
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media-server
spec:
  ports:
  - port: 7878
    targetPort: 7878
  selector:
    app: radarr
---
# Sonarr StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: media-server
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:4.0.15@sha256:fbe67c25693dc5f3de220c5691f374576ae265df782c16918cc071b630490bd7 # {"$imagepolicy": "flux-system:sonarr"}
        resources:
          limits:
            memory: 3Gi
          requests:
            memory: 200Mi
        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /tv
        - name: downloads
          mountPath: /downloads
        - name: completed
          mountPath: /completed
      volumes:
      - name: tv
        persistentVolumeClaim:
          claimName: shows
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-direct
      - name: completed
        persistentVolumeClaim:
          claimName: downloads-complete
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 120Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media-server
spec:
  ports:
  - port: 8989
    targetPort: 8989
  selector:
    app: sonarr
---
# Tubesync StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tubesync
  namespace: media-server
spec:
  serviceName: tubesync
  replicas: 1
  selector:
    matchLabels:
      app: tubesync
  template:
    metadata:
      labels:
        app: tubesync
    spec:
      containers:
      - name: tubesync
        image: ghcr.io/meeb/tubesync@sha256:89257085d6a604ac45ee967c176337e2a151f61fa5707c5626996dd7941c058c # {"$imagepolicy": "flux-system:tubesync"}
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 200Mi
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 500Mi
  - metadata:
      name: downloads
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 3Gi
---
apiVersion: v1
kind: Service
metadata:
  name: tubesync
  namespace: media-server
spec:
  ports:
  - port: 4848
    targetPort: 4848
  selector:
    app: tubesync
